--- a/frontend/light.css
+++ b/frontend/light.css
@@ -13,3 +13,12 @@ table#people thead {
 .matched {
     background-color: hsl(120, 100%, 90%);
 }
+.searchwords .term {
+    background-color: hsl(285, 100%, 82.5%);
+}
+.searchwords button:hover {
+    background-color: hsl(285, 100%, 75%);
+}
+.searchwords button:active {
+    background-color: hsl(285, 100%, 65%);
+}
