--- a/frontend/dark.css
+++ b/frontend/dark.css
@@ -47,3 +47,7 @@ table#people thead {
 .searchwords button:active {
     background-color: hsl(300, 100%, 10%);
 }
+.errors > li {
+    border: 1px solid hsl(0, 100%, 100%);
+    background-color: hsl(0, 100%, 20%);
+}
