--- a/frontend/light.css
+++ b/frontend/light.css
@@ -22,3 +22,7 @@ table#people thead {
 .searchwords button:active {
     background-color: hsl(285, 100%, 60%);
 }
+.errors > li {
+    border: 1px solid hsl(0, 100%, 20%);
+    background-color: hsl(0, 100%, 60%);
+}
