--- a/frontend/dark.css
+++ b/frontend/dark.css
@@ -51,3 +51,6 @@ table#people thead {
     border: 1px solid hsl(0, 100%, 100%);
     background-color: hsl(0, 100%, 20%);
 }
+.customiseColumns {
+    background-color: hsl(300, 100%, 15%);
+}
