--- a/frontend/dark.css
+++ b/frontend/dark.css
@@ -54,3 +54,12 @@ table#people thead {
 .customiseColumns {
     background-color: hsl(300, 100%, 15%);
 }
+.insertAbove {
+    border-top: 1px solid white;
+}
+.insertBelow {
+    border-bottom: 1px solid white;
+}
+.insertUnmoved {
+    border: 1px solid white;
+}
