rudimentary google login frontend

--- a/frontend/main.css
+++ b/frontend/main.css
@@ -1,7 +1,7 @@
 input[type="text"] {
     border: 0;
 }
-.facebook-button {
+.auth {
     font-family: serif;
     font-size: 100%;
     color: white;
