janky visual cues for the list reordering

--- a/frontend/main.css
+++ b/frontend/main.css
@@ -53,3 +53,7 @@ input[type="text"] {
 .errors > li {
     padding: 0.2em;
 }
+@keyframes fade-in {
+    from {opacity: 0%;}
+    to {opacity: 100%;}
+}
