--- a/frontend/dark.css
+++ b/frontend/dark.css
@@ -51,6 +51,9 @@ table#people thead {
     border: 1px solid hsl(0, 100%, 100%);
     background-color: hsl(0, 100%, 20%);
 }
+.flag {
+    background-color: hsl(0, 100%, 40%);
+}
 .customiseColumns {
     background-color: hsl(300, 100%, 15%);
 }
