--- a/frontend/light.css
+++ b/frontend/light.css
@@ -26,6 +26,9 @@ table#people thead {
     border: 1px solid hsl(0, 100%, 20%);
     background-color: hsl(0, 100%, 60%);
 }
+.flag {
+    background-color: hsl(0, 100%, 60%);
+}
 .customiseColumns {
     background-color: hsl(285, 80%, 70%);
 }
